fix gaps between plans and after pricing section

--- a/styles.css
+++ b/styles.css
@@ -1278,6 +1278,11 @@ footer ul {
     max-width: 35%;
     margin: auto 0;
     margin-right: 0px;
+    margin-bottom: 32px;
+  }
+
+  .plan:last-child {
+    margin-bottom: 80px;
   }
 
   footer {
